Fixed project title not showing

--- a/style.css
+++ b/style.css
@@ -257,7 +257,7 @@ nav ul li a:hover::after {
 .project {
     border-radius: 10px;
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .project-title {
